[tool.poetry]
name = "python_default_env"
version = "0.1.0"
description = ""
authors = ["Kosaku Ono <kevinrobot34@gmail.com>"]
readme = "README.md"
packages = [{include = "python_default_env"}]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.4.4"
ipython = "^8.5.0"
matplotlib = "^3.5.3"
boto3 = "^1.24.68"
PyMySQL = "^1.0.2"
awswrangler = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


