[tool.poetry]
name = "python_default_env"
version = "0.1.0"
description = ""
authors = ["Kosaku Ono <kevinrobot34@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.4.4"
matplotlib = "^3.5.3"
boto3 = "~1.24"
PyMySQL = "^1.0.2"
awswrangler = "^2.16.1"
fsspec = "^2022.8.2"
s3fs = "^2022.8.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
ipython = "^8.5.0"
ipykernel = "^6.15.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


